# fast-api-starter

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  start.sh
app/: config.py  main.py
app/controller/: auth_controller.py
app/core/: config.py
app/models/: auth.py  user.py
app/routes/: auth.py
app/service/: tokens_service.py  user_service.py
app/templates/email/: verification_email.py
app/utils/: emails.py  load_env.py  security.py
prisma/: schema.prisma
